package baggage;

option java_package = "edu.brown.cs.systems.baggage";

message BaggageMessage {

  /* Mapping of key to several values */
  message BagData {
    required bytes key = 1;
    repeated bytes value = 2;
  }
  
  /* Mapping of a namespace to a BagData */
  message NamespaceData {
    required bytes key = 1;
    repeated BagData bag = 2;
  }
  
  repeated NamespaceData namespace = 1;

}